syntax = "proto3";
package lbm.collection.v1;

import "lbm/base/query/v1/pagination.proto";
import "google/api/annotations.proto";
import "lbm/collection/v1/collection.proto";

import "google/protobuf/any.proto";
import "cosmos_proto/cosmos.proto";

import "gogoproto/gogo.proto";

option go_package = "github.com/line/lbm-sdk/x/collection";

// Query defines the gRPC querier service.
service Query {
  // Balance queries the balance of a single token class for a single account.
  rpc Balance(QueryBalanceRequest) returns (QueryBalanceResponse) {
    option (google.api.http).get = "/lbm/collection/v1/contracts/{contract_id}/balances/{address}/{token_id}";
  }

  // AllBalances queries the balance of all token classes for a single account.
  // Since: finschia
  rpc AllBalances(QueryAllBalancesRequest) returns (QueryAllBalancesResponse) {
    option (google.api.http).get = "/lbm/collection/v1/contracts/{contract_id}/balances/{address}";
  }

  // Supply queries the number of tokens from a given contract id and class id.
  // Since: finschia
  rpc Supply(QuerySupplyRequest) returns (QuerySupplyResponse) {
    option (google.api.http).get = "/lbm/collection/v1/contracts/{contract_id}/token_classes/{class_id}/supply";
  }

  // Minted queries the number of minted tokens from a given contract id and class id.
  // Since: finschia
  rpc Minted(QueryMintedRequest) returns (QueryMintedResponse) {
    option (google.api.http).get = "/lbm/collection/v1/contracts/{contract_id}/token_classes/{class_id}/minted";
  }

  // Burnt queries the number of burnt tokens from a given contract id and class id.
  // Since: finschia
  rpc Burnt(QueryBurntRequest) returns (QueryBurntResponse) {
    option (google.api.http).get = "/lbm/collection/v1/contracts/{contract_id}/token_classes/{class_id}/burnt";
  }

  // FTSupply queries the number of tokens from a given contract id and token id.
  // NOTE: deprecated (use Supply)
  rpc FTSupply(QueryFTSupplyRequest) returns (QueryFTSupplyResponse) {
    option (google.api.http).get = "/lbm/collection/v1/contracts/{contract_id}/fts/{token_id}/supply";
  }

  // FTMinted queries the number of minted tokens from a given contract id and token id.
  // NOTE: deprecated (use Minted)
  rpc FTMinted(QueryFTMintedRequest) returns (QueryFTMintedResponse) {
    option (google.api.http).get = "/lbm/collection/v1/contracts/{contract_id}/fts/{token_id}/minted";
  }

  // FTBurnt queries the number of burnt tokens from a given contract id and token id.
  // NOTE: deprecated (use Burnt)
  rpc FTBurnt(QueryFTBurntRequest) returns (QueryFTBurntResponse) {
    option (google.api.http).get = "/lbm/collection/v1/contracts/{contract_id}/fts/{token_id}/burnt";
  }

  // NFTSupply queries the number of tokens from a given contract id and token type.
  // NOTE: deprecated (use Supply)
  rpc NFTSupply(QueryNFTSupplyRequest) returns (QueryNFTSupplyResponse) {
    option (google.api.http).get = "/lbm/collection/v1/contracts/{contract_id}/token_types/{token_type}/supply";
  }

  // NFTMinted queries the number of minted tokens from a given contract id and token type.
  // NOTE: deprecated (use Minted)
  rpc NFTMinted(QueryNFTMintedRequest) returns (QueryNFTMintedResponse) {
    option (google.api.http).get = "/lbm/collection/v1/contracts/{contract_id}/token_types/{token_type}/minted";
  }

  // NFTBurnt queries the number of burnt tokens from a given contract id and token type.
  // NOTE: deprecated (use Burnt)
  rpc NFTBurnt(QueryNFTBurntRequest) returns (QueryNFTBurntResponse) {
    option (google.api.http).get = "/lbm/collection/v1/contracts/{contract_id}/token_types/{token_type}/burnt";
  }

  // Contract queries a contract metadata based on its contract id.
  rpc Contract(QueryContractRequest) returns (QueryContractResponse) {
    option (google.api.http).get = "/lbm/collection/v1/contracts/{contract_id}";
  }

  // Contracts queries metadata of all contracts.
  // Since: finschia
  rpc Contracts(QueryContractsRequest) returns (QueryContractsResponse) {
    option (google.api.http).get = "/lbm/collection/v1/contracts";
  }

  // TokenClass queries a metadata of a token class from its class id.
  // Since: finschia
  rpc TokenClass(QueryTokenClassRequest) returns (QueryTokenClassResponse) {
    option (google.api.http).get = "/lbm/collection/v1/contracts/{contract_id}/token_classes/{class_id}";
  }

  // TokenClasses queries token metadata of all token classes of a contract.
  // Since: finschia
  rpc TokenClasses(QueryTokenClassesRequest) returns (QueryTokenClassesResponse) {
    option (google.api.http).get = "/lbm/collection/v1/contracts/{contract_id}/token_classes";
  }

  // FT queries a metadata of a fungible token from its token id.
  // NOTE: deprecated (use TokenClass)
  rpc FT(QueryFTRequest) returns (QueryFTResponse) {
    option (google.api.http).get = "/lbm/collection/v1/contracts/{contract_id}/fts/{token_id}";
  }

  // TokenType queries metadata of a token type.
  // NOTE: deprecated (use TokenClass)
  rpc TokenType(QueryTokenTypeRequest) returns (QueryTokenTypeResponse) {
    option (google.api.http).get = "/lbm/collection/v1/contracts/{contract_id}/token_types/{token_type}";
  }

  // TokenTypes queries metadata of all the token types.
  // NOTE: deprecated (use TokenClasses)
  rpc TokenTypes(QueryTokenTypesRequest) returns (QueryTokenTypesResponse) {
    option (google.api.http).get = "/lbm/collection/v1/contracts/{contract_id}/token_types";
  }

  // Tokens queries all token metadata.
  // NOTE: deprecated (use TokenClasses and NFT)
  rpc Tokens(QueryTokensRequest) returns (QueryTokensResponse) {
    option (google.api.http).get = "/lbm/collection/v1/contracts/{contract_id}/tokens";
  }

  // NFT queries a metadata of a non-fungible token.
  rpc NFT(QueryNFTRequest) returns (QueryNFTResponse) {
    option (google.api.http).get = "/lbm/collection/v1/contracts/{contract_id}/nfts/{token_id}";
  }

  // NFTs queries a metadata of all non-fungible tokens.
  // Since: finschia
  rpc NFTs(QueryNFTsRequest) returns (QueryNFTsResponse) {
    option (google.api.http).get = "/lbm/collection/v1/contracts/{contract_id}/nfts";
  }

  // Root queries the root of a given nft.
  rpc Root(QueryRootRequest) returns (QueryRootResponse) {
    option (google.api.http).get = "/lbm/collection/v1/contracts/{contract_id}/nfts/{token_id}/root";
  }

  // Parent queries the parent of a given nft.
  rpc Parent(QueryParentRequest) returns (QueryParentResponse) {
    option (google.api.http).get = "/lbm/collection/v1/contracts/{contract_id}/nfts/{token_id}/parent";
  }

  // Children queries the children of a given nft.
  rpc Children(QueryChildrenRequest) returns (QueryChildrenResponse) {
    option (google.api.http).get = "/lbm/collection/v1/contracts/{contract_id}/nfts/{token_id}/children";
  }

  // Grant queries a permission on a given grantee.
  // Since: finschia
  rpc Grant(QueryGrantRequest) returns (QueryGrantResponse) {
    option (google.api.http).get = "/lbm/collection/v1/contracts/{contract_id}/grants/{grantee}/{permission}";
  }

  // GranteeGrants queries all permissions on a given grantee.
  // Since: finschia
  rpc GranteeGrants(QueryGranteeGrantsRequest) returns (QueryGranteeGrantsResponse) {
    option (google.api.http).get = "/lbm/collection/v1/contracts/{contract_id}/grants/{grantee}";
  }

  // Authorization queries an authorization on a given operator approver pair.
  // Since: finschia
  rpc Authorization(QueryAuthorizationRequest) returns (QueryAuthorizationResponse) {
    option (google.api.http).get = "/lbm/collection/v1/contracts/{contract_id}/authorizations/{operator}/{holder}";
  }

  // OperatorAuthorizations queries authorizations on a given operator.
  // Since: finschia
  rpc OperatorAuthorizations(QueryOperatorAuthorizationsRequest) returns (QueryOperatorAuthorizationsResponse) {
    option (google.api.http).get = "/lbm/collection/v1/contracts/{contract_id}/authorizations/{operator}";
  }

  // Approved queries whether the operator is approved by the approver.
  // NOTE: deprecated (use Authorization)
  rpc Approved(QueryApprovedRequest) returns (QueryApprovedResponse) {
    option (google.api.http).get = "/lbm/collection/v1/contracts/{contract_id}/accounts/{address}/proxies/{approver}";
  }

  // Approvers queries approvers of a given operator.
  // NOTE: deprecated (use OperatorAuthorizations)
  rpc Approvers(QueryApproversRequest) returns (QueryApproversResponse) {
    option (google.api.http).get = "/lbm/collection/v1/contracts/{contract_id}/accounts/{address}/approvers";
  }
}

// QueryBalanceRequest is the request type for the Query/Balance RPC method.
message QueryBalanceRequest {
  // contract id associated with the contract.
  string contract_id = 1;
  // address is the address to query the balance for.
  string address = 2;
  // token id associated with the token.
  string token_id = 3;
}

// QueryBalanceResponse is the response type for the Query/Balance RPC method.
message QueryBalanceResponse {
  // balance is the balance of the token.
  Coin balance = 1;
}

// QueryAllBalancesRequest is the request type for the Query/AllBalances RPC method.
// Since: finschia
message QueryAllBalancesRequest {
  // contract id associated with the contract.
  string contract_id = 1;
  // address is the address to query the balances for.
  string address = 2;

  // pagination defines an optional pagination for the request.
  lbm.base.query.v1.PageRequest pagination = 3;
}

// QueryAllBalancesResponse is the response type for the Query/AllBalances RPC method.
// Since: finschia
message QueryAllBalancesResponse {
  // balances is the balalces of all the tokens.
  repeated Coin balances = 1 [(gogoproto.nullable) = false];

  // pagination defines the pagination in the response.
  lbm.base.query.v1.PageResponse pagination = 2;
}

// QuerySupplyRequest is the request type for the Query/Supply RPC method.
// Since: finschia
message QuerySupplyRequest {
  // contract id associated with the contract.
  string contract_id = 1;
  // class id associated with the token class.
  string class_id = 2;
}

// QuerySupplyResponse is the response type for the Query/Supply RPC method.
// Since: finschia
message QuerySupplyResponse {
  // supply is the supply of the tokens.
  string supply = 1 [(gogoproto.customtype) = "github.com/line/lbm-sdk/types.Int", (gogoproto.nullable) = false];
}

// QueryMintedRequest is the request type for the Query/Minted RPC method.
// Since: finschia
message QueryMintedRequest {
  // contract id associated with the contract.
  string contract_id = 1;
  // class id associated with the token class.
  string class_id = 2;
}

// QueryMintedResponse is the response type for the Query/Minted RPC method.
// Since: finschia
message QueryMintedResponse {
  // minted is the amount of the minted tokens.
  string minted = 1 [(gogoproto.customtype) = "github.com/line/lbm-sdk/types.Int", (gogoproto.nullable) = false];
}

// QueryBurntRequest is the request type for the Query/Burnt RPC method.
// Since: finschia
message QueryBurntRequest {
  // contract id associated with the contract.
  string contract_id = 1;
  // class id associated with the token class.
  string class_id = 2;
}

// QueryBurntResponse is the response type for the Query/Burnt RPC method.
// Since: finschia
message QueryBurntResponse {
  // burnt is the amount of the burnt tokens.
  string burnt = 1 [(gogoproto.customtype) = "github.com/line/lbm-sdk/types.Int", (gogoproto.nullable) = false];
}

// QueryFTSupplyRequest is the request type for the Query/FTSupply RPC method.
// NOTE: deprecated (use QuerySupplyRequest)
message QueryFTSupplyRequest {
  // contract id associated with the contract.
  string contract_id = 1;
  // token id associated with the fungible token.
  string token_id = 2;
}

// QueryFTSupplyResponse is the response type for the Query/FTSupply RPC method.
// NOTE: deprecated
message QueryFTSupplyResponse {
  // supply is the supply of the tokens.
  string supply = 1 [(gogoproto.customtype) = "github.com/line/lbm-sdk/types.Int", (gogoproto.nullable) = false];
}

// QueryFTMintedRequest is the request type for the Query/FTMinted RPC method.
// NOTE: deprecated (use QueryMintedRequest)
message QueryFTMintedRequest {
  // contract id associated with the contract.
  string contract_id = 1;
  // token id associated with the fungible token.
  string token_id = 2;
}

// QueryFTMintedResponse is the response type for the Query/FTMinted RPC method.
// NOTE: deprecated
message QueryFTMintedResponse {
  // minted is the amount of the minted tokens.
  string minted = 1 [(gogoproto.customtype) = "github.com/line/lbm-sdk/types.Int", (gogoproto.nullable) = false];
}

// QueryFTBurntRequest is the request type for the Query/FTBurnt RPC method.
// NOTE: deprecated (use QueryBurntRequest)
message QueryFTBurntRequest {
  // contract id associated with the contract.
  string contract_id = 1;
  // token id associated with the fungible token.
  string token_id = 2;
}

// QueryFTBurntResponse is the response type for the Query/FTBurnt RPC method.
// NOTE: deprecated
message QueryFTBurntResponse {
  // burnt is the amount of the burnt tokens.
  string burnt = 1 [(gogoproto.customtype) = "github.com/line/lbm-sdk/types.Int", (gogoproto.nullable) = false];
}

// QueryNFTSupplyRequest is the request type for the Query/NFTSupply RPC method.
// NOTE: deprecated (use QuerySupplyRequest)
message QueryNFTSupplyRequest {
  // contract id associated with the contract.
  string contract_id = 1;
  // token type associated with the token type.
  string token_type = 2;
}

// QueryNFTSupplyResponse is the response type for the Query/NFTSupply RPC method.
// NOTE: deprecated
message QueryNFTSupplyResponse {
  // supply is the supply of the non-fungible token.
  string supply = 1 [(gogoproto.customtype) = "github.com/line/lbm-sdk/types.Int", (gogoproto.nullable) = false];
}

// QueryNFTMintedRequest is the request type for the Query/NFTMinted RPC method.
// NOTE: deprecated (use QueryMintedRequest)
message QueryNFTMintedRequest {
  // contract id associated with the contract.
  string contract_id = 1;
  // token type associated with the token type.
  string token_type = 2;
}

// QueryNFTMintedResponse is the response type for the Query/NFTMinted RPC method.
// NOTE: deprecated
message QueryNFTMintedResponse {
  // minted is the amount of minted tokens.
  string minted = 1 [(gogoproto.customtype) = "github.com/line/lbm-sdk/types.Int", (gogoproto.nullable) = false];
}

// QueryNFTBurntRequest is the request type for the Query/NFTBurnt RPC method.
// NOTE: deprecated (use QueryBurntRequest)
message QueryNFTBurntRequest {
  // contract id associated with the contract.
  string contract_id = 1;
  // token type associated with the token type.
  string token_type = 2;
}

// QueryNFTBurntResponse is the response type for the Query/NFTBurnt RPC method.
// NOTE: deprecated
message QueryNFTBurntResponse {
  // burnt is the amount of the burnt tokens.
  string burnt = 1 [(gogoproto.customtype) = "github.com/line/lbm-sdk/types.Int", (gogoproto.nullable) = false];
}

// QueryContractRequest is the request type for the Query/Contract RPC method.
message QueryContractRequest {
  // contract id associated with the contract.
  string contract_id = 1;
}

// QueryContractResponse is the response type for the Query/Contract RPC method.
message QueryContractResponse {
  // contract is the information of the contract.
  Contract contract = 1;
}

// QueryContractsRequest is the request type for the Query/Contracts RPC method.
// Since: finschia
message QueryContractsRequest {
  // pagination defines an optional pagination for the request.
  lbm.base.query.v1.PageRequest pagination = 1;
}

// QueryContractsResponse is the response type for the Query/Contracts RPC method.
// Since: finschia
message QueryContractsResponse {
  // contracts is the informations of all the contracts.
  repeated Contract contracts = 1;

  // pagination defines the pagination in the response.
  lbm.base.query.v1.PageResponse pagination = 2;
}

// QueryFTRequest is the request type for the Query/FT RPC method.
// NOTE: deprecated (use QueryTokenClassRequest)
message QueryFTRequest {
  // contract id associated with the contract.
  string contract_id = 1;
  // token id associated with the fungible token.
  string token_id = 2;
}

// QueryFTResponse is the response type for the Query/FT RPC method.
// NOTE: deprecated
message QueryFTResponse {
  // token is the information of the fungible token.
  Fungible token = 1;
}

// QueryTokenTypeRequest is the request type for the Query/TokenType RPC method.
// NOTE: deprecated (use QueryTokenClassRequest)
message QueryTokenTypeRequest {
  // contract id associated with the contract.
  string contract_id = 1;
  // token type associated with the token type.
  string token_type = 2;
}

// QueryTokenTypeResponse is the response type for the Query/TokenType RPC method.
// NOTE: deprecated
message QueryTokenTypeResponse {
  // token type is the information of the token type.
  TokenType token_type = 1;
}

// QueryTokenTypesRequest is the request type for the Query/TokenTypes RPC method.
// NOTE: deprecated (use QueryTokenClassesRequest)
message QueryTokenTypesRequest {
  // contract id associated with the contract.
  string contract_id = 1;

  // pagination defines an optional pagination for the request.
  lbm.base.query.v1.PageRequest pagination = 2;
}

// QueryTokenTypesResponse is the response type for the Query/TokenTypes RPC method.
// NOTE: deprecated
message QueryTokenTypesResponse {
  // token types is the informations of all the token types.
  repeated TokenType token_types = 1 [(gogoproto.nullable) = false];

  // pagination defines the pagination in the response.
  lbm.base.query.v1.PageResponse pagination = 2;
}

// QueryTokensRequest is the request type for the Query/Tokens RPC method.
// NOTE: deprecated (use QueryTokenClasses and NFT)
message QueryTokensRequest {
  // contract id associated with the contract.
  string contract_id = 1;

  // pagination defines an optional pagination for the request.
  lbm.base.query.v1.PageRequest pagination = 2;
}

// QueryTokensResponse is the response type for the Query/Tokens RPC method.
message QueryTokensResponse {
  // tokens is the informations of all the tokens.
  google.protobuf.Any tokens = 1 [(gogoproto.nullable) = false, (cosmos_proto.accepts_interface) = "Token"];

  // pagination defines the pagination in the response.
  lbm.base.query.v1.PageResponse pagination = 2;
}

// QueryTokenClassRequest is the request type for the Query/TokenClass RPC method.
// Since: finschia
message QueryTokenClassRequest {
  // contract id associated with the contract.
  string contract_id = 1;
  // class id associated with the token class.
  string class_id = 2;
}

// QueryTokenClassResponse is the response type for the Query/TokenClass RPC method.
// Since: finschia
message QueryTokenClassResponse {
  // class is the information of the token class.
  google.protobuf.Any class = 1 [(cosmos_proto.accepts_interface) = "TokenClass"];
}

// QueryTokenClassesRequest is the request type for the Query/TokenClasses RPC method.
// Since: finschia
message QueryTokenClassesRequest {
  // contract id associated with the contract.
  string contract_id = 1;

  // pagination defines an optional pagination for the request.
  lbm.base.query.v1.PageRequest pagination = 2;
}

// QueryTokenClassesResponse is the response type for the Query/TokenClasses RPC method.
// Since: finschia
message QueryTokenClassesResponse {
  // classes is the informations of all the token classes.
  repeated google.protobuf.Any classes = 1
      [(gogoproto.nullable) = false, (cosmos_proto.accepts_interface) = "TokenClass"];

  // pagination defines the pagination in the response.
  lbm.base.query.v1.PageResponse pagination = 2;
}

// QueryNFTRequest is the request type for the Query/NFT RPC method.
message QueryNFTRequest {
  // contract id associated with the contract.
  string contract_id = 1;
  // token id associated with the non-fungible token.
  string token_id = 2;
}

// QueryNFTResponse is the response type for the Query/NFT RPC method.
message QueryNFTResponse {
  // token is the information of the non-fungible token.
  NFT token = 1;
}

// QueryNFTsRequest is the request type for the Query/NFTs RPC method.
message QueryNFTsRequest {
  // contract id associated with the contract.
  string contract_id = 1;

  // pagination defines an optional pagination for the request.
  lbm.base.query.v1.PageRequest pagination = 2;
}

// QueryNFTsResponse is the response type for the Query/NFTs RPC method.
// Since: finschia
message QueryNFTsResponse {
  // token is the information of the non-fungible token.
  repeated NFT token = 1 [(gogoproto.nullable) = false];

  // pagination defines the pagination in the response.
  lbm.base.query.v1.PageResponse pagination = 2;
}

// QueryRootRequest is the request type for the Query/Root RPC method.
message QueryRootRequest {
  // contract id associated with the contract.
  string contract_id = 1;
  // token id associated with the non-fungible token.
  string token_id = 2;
}

// QueryRootResponse is the response type for the Query/Root RPC method.
message QueryRootResponse {
  // root is the information of the root token.
  // it would return itself if it's the root token.
  NFT root = 1;
}

// QueryParentRequest is the request type for the Query/Parent RPC method.
message QueryParentRequest {
  // contract id associated with the contract.
  string contract_id = 1;
  // token id associated wit the non-fungible token.
  string token_id = 2;
}

// QueryParentResponse is the response type for the Query/Parent RPC method.
message QueryParentResponse {
  // parent is the information of the parent token.
  // if there is no parent for the token, it would return nil.
  NFT parent = 1;
}

// QueryChildrenRequest is the request type for the Query/Children RPC method.
message QueryChildrenRequest {
  // contract id associated with the contract.
  string contract_id = 1;
  // token id associated with the non-fungible token.
  string token_id = 2;

  // pagination defines an optional pagination for the request.
  lbm.base.query.v1.PageRequest pagination = 3;
}

// QueryChildrenResponse is the response type for the Query/Children RPC method.
message QueryChildrenResponse {
  // children is the information of the child tokens.
  repeated NFT children = 1 [(gogoproto.nullable) = false];

  // pagination defines the pagination in the response.
  lbm.base.query.v1.PageResponse pagination = 2;
}

// QueryGrantRequest is the request type for the Query/Grant RPC method.
// Since: finschia
message QueryGrantRequest {
  // contract id associated with the contract.
  string contract_id = 1;
  // the address of the grantee.
  string grantee = 2;
  // permission on the contract.
  string permission = 3;
}

// QueryGrantResponse is the response type for the Query/Grant RPC method.
// Since: finschia
message QueryGrantResponse {
  // if no grant found for the request, it would be nil and return an error.
  Grant grant = 1;
}

// QueryGranteeGrantsRequest is the request type for the Query/GranteeGrants RPC method.
// Since: finschia
message QueryGranteeGrantsRequest {
  // contract id associated with the contract.
  string contract_id = 1;
  // the address of the grantee.
  string grantee = 2;

  // pagination defines an optional pagination for the request.
  lbm.base.query.v1.PageRequest pagination = 3;
}

// QueryGranteeGrantsResponse is the response type for the Query/GranteeGrants RPC method.
// Since: finschia
message QueryGranteeGrantsResponse {
  repeated Grant grants = 1 [(gogoproto.nullable) = false];

  // pagination defines the pagination in the response.
  lbm.base.query.v1.PageResponse pagination = 2;
}

// QueryAuthorizationRequest is the request type for the Query/Authorization RPC method.
// Since: finschia
message QueryAuthorizationRequest {
  // contract id associated with the contract.
  string contract_id = 1;
  // the address of the operator.
  string operator = 2;
  // the address of the token holder.
  string holder = 3;
}

// QueryAuthorizationResponse is the response type for the Query/Authorization RPC method.
// Since: finschia
message QueryAuthorizationResponse {
  // if no authorization found for the request, it would be nil.
  Authorization authorization = 1;
}

// QueryOperatorAuthorizationsRequest is the request type for the Query/OperatorAuthorizations RPC method.
// Since: finschia
message QueryOperatorAuthorizationsRequest {
  // contract id associated with the contract.
  string contract_id = 1;
  // address of the operator.
  string operator = 2;

  // pagination defines an optional pagination for the request.
  lbm.base.query.v1.PageRequest pagination = 3;
}

// QueryOperatorAuthorizationsResponse is the response type for the Query/OperatorAuthorizations RPC method.
// Since: finschia
message QueryOperatorAuthorizationsResponse {
  repeated Authorization authorizations = 1 [(gogoproto.nullable) = false];

  // pagination defines the pagination in the response.
  lbm.base.query.v1.PageResponse pagination = 2;
}

// QueryApprovedRequest is the request type for the Query/Approved RPC method.
// NOTE: deprecated (use QueryAuthorizationRequest)
message QueryApprovedRequest {
  // contract id associated with the contract.
  string contract_id = 1;
  // the address of the operator.
  string address = 2;
  // the address of the token holder.
  string approver = 3;
}

// QueryApprovedResponse is the response type for the Query/Approved RPC method.
// NOTE: deprecated
message QueryApprovedResponse {
  bool approved = 1;
}

// QueryApproversRequest is the request type for the Query/Approvers RPC method.
// NOTE: deprecated (use QueryOperatorAuthorizations)
message QueryApproversRequest {
  // contract id associated with the contract.
  string contract_id = 1;
  // address of the operator.
  string address = 2;

  // pagination defines an optional pagination for the request.
  lbm.base.query.v1.PageRequest pagination = 3;
}

// QueryApproversResponse is the response type for the Query/Approvers RPC method.
// NOTE: deprecated
message QueryApproversResponse {
  repeated string approvers = 1;

  // pagination defines the pagination in the response.
  lbm.base.query.v1.PageResponse pagination = 2;
}
